@@ -28,6 +28,7 @@ exportClasses(CompoundIdFilter)
 exportClasses(CompoundNameFilter)
 exportClasses(MsmsMzRangeMaxFilter)
 exportClasses(MsmsMzRangeMinFilter)
+exportMethods(annotateMz)
 exportMethods(dbconn)
 exportMethods(hasMz)
 exportMethods(show)
@@ -38,6 +39,7 @@ importClassesFrom(AnnotationFilter,AnnotationFilterList)
 importClassesFrom(AnnotationFilter,CharacterFilter)
 importClassesFrom(AnnotationFilter,DoubleFilter)
 importClassesFrom(MSnbase,Spectra)
+importClassesFrom(tibble,tbl_df)
 importFrom(AnnotationFilter,AnnotationFilter)
 importFrom(AnnotationFilter,AnnotationFilterList)
 importFrom(Biobase,createPackage)
